Add Site generation

--- a/docroot/WEB-INF/src/content/Language.properties
+++ b/docroot/WEB-INF/src/content/Language.properties
@@ -201,6 +201,18 @@
     organization-organization-update-level=Each Organization will update that times
 
 ##
+## Site
+##
+    site=Site
+    site-active-site=Active
+    site-multi-select-user-list=These users will added to the Sites
+    site-site-count=Generate that amount of Sites
+    site-site-depth=Depth of the sub Sites
+    site-site-type=Site type
+    site-site-sub-count=Generate that amount of sub Sites
+    site-site-update-level=Each Site will update that times
+
+##
 ## Team
 ##
     team=Team
